# playground

./: README.md
alloy/: tutorial.als
cpp/move-shared-optionals/: main.cpp
eigen/: CMakeLists.txt
eigen/src/: main.cpp
rust-macros/: Cargo.toml
rust-macros/src/: lib.rs
rust-macros/tests/: my_custom_attr.rs  my_declr_macro.rs
smartie/: README.md  package.json
smartie/contracts/: Adoption.sol
smartie/migrations/: 1641648181_deploy_contracts.js
smartie/test/: AdoptionTest.sol
webgl/: helloworld.html
webgl/tutorial/: build.js  esbuild.config.js  package.json  serve.js
webgl/tutorial/public/: index.css  index.html
webgl/tutorial/src/: draw.ts  index.ts  lib.ts  types.d.ts
webgl/tutorial/src/lib/: index.ts
webgl/tutorial/src/shaders/: vertex.glsl
